# hermes-tag

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Hermes Feishu Tag 插件实现 Spec.md  Hermes Feishu Tag 插件设计文档.md  Hermes Feishu Tag 插件设计方案 v2.md  Hermes Feishu Tag 插件返修 Spec v2.md  Hermes Feishu Tag 插件返修 Spec v3 (F4).md  Hermes Feishu Tag 插件返修 Spec.md  Hermes Tag 重构方案.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  __init__.py  after-install.md  after-install.zh-CN.md  plugin.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
channels/: feishu.py
core/: __init__.py
docs/: dingtalk.md  known-limits.md  known-limits.zh-CN.md  repair-evidence.md  slack-e2e.md  slack-manifest-add-tag.py  slack-setup.md
docs/design/: 0.3.0-dingtalk-plan.md  0.4.0-f1-spec.md  0.4.0-f2-spec.md  0.4.0-plan.md  claude-tag-parity-plan.md  context-injection-review-plan.md  feishu-pain-points-research.md  live-e2e-test-plan.md  optimization-plan.md  repair-evidence.md  roadmap.md
src/hermes_plugin_feishu/: __init__.py  adapter.py  base.py  context.py  core.py  i18n.py
src/hermes_tag/: __init__.py  adapter.py  base.py  (+3 more)
tests/: test_base_seam.py  test_capability_check.py  test_context_deictic.py  test_dingtalk_seam.py  test_foundation.py  test_identity_normalization.py  test_real_hermes_compat.py  test_second_channel_fixture.py  test_slack_native_patch.py  test_slack_seam.py  test_standing_privacy_observability.py  test_tier0_context.py  test_tier1_memory.py  test_version_agreement.py
