[project]
name = "hermes-plugin-feishu-tag"
version = "0.1.0"
description = "Hermes Feishu tag platform plugin"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
hermes = [
  "hermes-agent[feishu,cron] @ git+https://github.com/NousResearch/hermes-agent.git@v2026.6.19",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
