[project]
name = "hermes-plugin-feishu-tag"
version = "0.2.0"
description = "Hermes Feishu tag platform plugin"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."hermes_agent.plugins"]
feishu-tag = "hermes_plugin_feishu:register"

[project.optional-dependencies]
hermes = [
  "hermes-agent[feishu,cron] @ git+https://github.com/NousResearch/hermes-agent.git@v2026.6.19",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
